added endpoint to CRUD